# MIRAI

./: .codecov.yml  .gitignore  .travis.yml  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  ISSUE_TEMPLATE.md  PULL_REQUEST_TEMPLATE.md  README.md  install_mirai.sh  rebuild_std.sh  reinstall_mirai.sh  rust-toolchain  rust-toolchain.toml  setup.sh  validate.sh
.cargo/: config.toml
.github/workflows/: mirai_on_mirai.yml  rust.yml  updater.yaml
annotations/: Cargo.toml  README.md
annotations/src/: lib.rs
binaries/: libz3.lib  summary_store.tar  z3.lib
checker/: Cargo.toml  Cargo.windows.toml  build.rs
checker/src/: abstract_domains.rs  abstract_value.rs  block_visitor.rs  body_visitor.rs  bool_domain.rs  call_graph.rs  call_visitor.rs  callbacks.rs  cargo_mirai.rs  constant_domain.rs  crate_visitor.rs  environment.rs  expected_errors.rs  expression.rs  fixed_point_visitor.rs  interval_domain.rs  k_limits.rs  known_names.rs  lib.rs  main.rs  octagon_domain.rs  octagons_domain.rs  options.rs  path.rs  smt_solver.rs  summaries.rs  tag_domain.rs  type_visitor.rs  utils.rs  visitors.rs  z3_solver.rs
checker/tests/: integration_tests.rs
checker/tests/benchmarks/: get_elem_values.rs
checker/tests/call_graph/: fnptr.rs  fnptr_clean.rs  fnptr_deduplicate.rs  fnptr_dom.rs  fnptr_dom_loop.rs  fnptr_dom_loop_souffle.rs  fnptr_fold.rs  fnptr_loop.rs  fnptr_slice.rs  generic.rs  replace_croot.rs  static.rs  static_clean.rs  static_deduplicate.rs  static_dom.rs  static_dom_loop.rs  static_fold.rs  static_loop.rs  static_no_args.rs  static_slice.rs  static_souffle.rs  trait.rs  type_relations.json  type_relations.rs  type_relations.rs_disabled
checker/tests/run-pass/: abort.rs  abstract_value.rs  alloc_zeroed.rs  and_then.rs  array_access_with_unwind.rs  array_copy.rs  array_index.rs  array_len.rs  array_length.rs  array_literal.rs  array_literal_out_of_bounds.rs  array_pattern_copy.rs  array_pattern_match.rs  array_pattern_move.rs  array_repeat.rs  array_static.rs  ascii_set.rs  assert_as_precondition.rs  assume.rs  assume_post.rs  assume_preconditions.rs  assume_provably_false.rs  async.rs  binary_arith.rs  binary_bitwise.rs  binary_overflow.rs  bit_counting.rs  bit_vec.rs  bit_vector_and_vec_push.rs  bit_vectors.rs  bitwise_not.rs  box_deref.rs  box_fail.rs  box_struct.rs  buffer.rs  call_once.rs  cast.rs  checked_add.rs  closure_mut_param.rs  closure_param.rs  (+183 more)
documentation/: AbstractValues.md  Architecture.md  Caching.md  CallGraph.md  DebuggingRustc.md  Decisions.md  DesignDiscussions.md  DeveloperGuide.md  FurtherReading.md  IncrementalAnalysis.md  InstallationGuide.md  Linux.md  Overview.md  Parallelism.md  TagAnalysis.md  Troubleshooting.md  WhyMir.md  WhyPlugIn.md  WhyRust.md  WhyTopDown.md  Z3AndLinux.md
examples/: foreign_contracts.rs  shopping_cart.rs
examples/selection_sort/: Cargo.toml
examples/selection_sort/src/: .main.rs.swp  main.rs
examples/shopping_cart/: Cargo.toml
examples/shopping_cart/src/: main.rs
examples/tag_analysis/timing_channels/: Cargo.toml
examples/tag_analysis/timing_channels/src/: lib.rs
examples/tag_analysis/trait_methods/: Cargo.toml
examples/tag_analysis/trait_methods/src/: lib.rs
examples/tag_analysis/untrustworthy_inputs/: Cargo.toml
examples/tag_analysis/untrustworthy_inputs/src/: lib.rs
examples/tag_analysis/verification_status/: Cargo.toml
examples/tag_analysis/verification_status/src/: lib.rs
examples/taint/: Cargo.toml
examples/taint/src/: main.rs
examples/taint/taint_error/: Cargo.toml
examples/taint/taint_error/src/: lib.rs
presentations/: MIRAI basics.pptx  Rust verification workshop.pptx
src/: abstract_domains.rs  abstract_value.rs  callbacks.rs  constant_domain.rs  constant_value.rs  environment.rs  expected_errors.rs  expression.rs  interval_domain.rs  k_limits.rs  lib.rs  main.rs  smt_solver.rs  summaries.rs  utils.rs  visitors.rs
standard_contracts/: Cargo.toml  README.md
standard_contracts/src/: foreign_contracts.rs  lib.rs  macros.rs
substrate-examples/: README.md
substrate-examples/offchain-worker/: Cargo.toml  README.md
substrate-examples/offchain-worker/.cargo/: config.toml
substrate-examples/offchain-worker/src/: lib.rs  mirai.rs  tests.rs
substrate-examples/pallet_template/: Cargo.toml  README.md
substrate-examples/pallet_template/.cargo/: config.toml
substrate-examples/pallet_template/src/: benchmarking.rs  lib.rs  mirai.rs  mock.rs  tests.rs
tests/: integration_tests.rs  validate.sh
tests/run-pass/: abort.rs  array_access_with_unwind.rs  array_copy.rs  array_index.rs  array_literal.rs  array_literal_out_of_bounds.rs  array_pattern_copy.rs  array_pattern_move.rs  binary_arith.rs  binary_bitwise.rs  binary_overflow.rs  box_struct.rs  crate_traversal.rs  enum_assign.rs  false_assertion.rs  field_assign.rs  func_call.rs  func_call_return_struct.rs  func_call_side_effect.rs  lazy_const_array.rs  maybe_unreachable.rs  negation.rs  numeric_constants.rs  other_constants.rs  precondition.rs  promoted_array.rs  promoted_constant.rs  ref_deref.rs  relational_intervals.rs  return_conditional.rs  simplify.rs  static_assign.rs  subslice_pattern.rs  subslice_pattern_copy.rs  subslice_pattern_move.rs  true_assertion.rs  unreachable.rs  use_copy.rs  use_move.rs  weak_update_heap.rs  (+2 more)
