[package]

name = "mirai-annotations"
version = "1.12.0"
authors = ["Herman Venter <hermanv@fb.com>"]
description = "Macros that provide source code annotations for MIRAI"
repository = "https://github.com/facebookexperimental/MIRAI"
readme = "README.md"
license = "MIT"
edition = "2018"

[lib]
test = false # we have no unit tests
doctest = false # and no doc tests

[dependencies]
