[package]

name = "mirai-annotations"
version = "1.12.0"
authors = ["Herman Venter <herman_venter@msn.com>"]
description = "Macros that provide source code annotations for MIRAI"
repository = "https://github.com/facebookexperimental/MIRAI"
readme = "README.md"
license = "MIT"
edition = "2021"

[lib]
test = false # we have no unit tests
doctest = false # and no doc tests

[dependencies]
