[package]
name = "taint"
version = "0.1.0"
authors = ["Herman Venter <herman_venter@msn.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "taint"
test = false # we have no unit tests
doctest = false # and no doc tests

[dependencies]
taint-error = { path = "./taint_error" }
