[package]
name = "taint-error"
version = "0.1.0"
authors = ["Herman Venter <herman_venter@msn.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
test = false # we have no unit tests
doctest = false # and no doc tests

[dependencies]
mirai-annotations = { path = "../../../annotations" }
